# WhiteChristmas

./: .gitignore  gradle.properties  import-summary.txt
OpenCV-android-sdk/apk/: readme.txt
WhiteChristmas/: import-summary.txt
WhiteChristmas/app/: build.gradle
WhiteChristmas/app/src/androidTest/java/com/example/rebeb/whitechristmas/: ExampleInstrumentedTest.java
WhiteChristmas/app/src/main/: AndroidManifest.xml
WhiteChristmas/app/src/main/java/com/example/rebeb/whitechristmas/: ColorBlobDetector.java  DetectionBasedTracker.java  FdActivity.java  MainActivity.java
WhiteChristmas/app/src/main/res/layout/: activity_main.xml
WhiteChristmas/app/src/test/java/com/example/rebeb/whitechristmas/: ExampleUnitTest.java
WhiteChristmas/gradle/wrapper/: gradle-wrapper.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cvsp/whitechristmas/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/cvsp/whitechristmas/: MainActivity.java  OpencvCalls.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/cvsp/whitechristmas/: ExampleUnitTest.java
openCVLibrary343/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  CameraGLSurfaceView.java
